# openWakeWord-cpp

./: .gitignore  Makefile  README.md
models/: embedding_model.onnx  hey_marvin_v0.1.onnx  hey_mycroft_v0.1.onnx
src/: CMakeLists.txt  main.cpp  main.h
src/android/: CMakeLists.txt  OpenWakeWordServiceExample.java  OpenWakeWorkWorkerExample.java
